Deleted the Dummy + added user Routes + modified the jwt handling
